Updating the structure of the CircleCI configuration to support more reuse.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,47 +5,74 @@
 # TODO: Get rid of all this CircleCI caching in favor of extended Docker images
 #
 version: 2
+
+
+application: &application
+  docker:
+    - image: python:3.6-slim-stretch
+      environment:
+        LANG: C.UTF-8
+        PYTHONUNBUFFERED: 1
+
+    - image: postgres:9.4
+      environment:
+        POSTGRES_USER: circleci
+        POSTGRES_PASSWORD: circleci
+        POSTGRES_DB: circle-test
+
+  working_directory: /var/local
+
+deployer: &deployer
+  docker:
+    - image: python:3.6-slim-stretch
+      environment:
+        LANG: C.UTF-8
+        PYTHONUNBUFFERED: 1
+        CF_LOGIN_URL: 'https://api.fr.cloud.gov'
+
+  working_directory: /var/local
+
+
+core: &core
+  name: Install development tools
+  command: |
+    apt-get update
+    apt-get install -y git gcc
+
+django: &django
+  name: Install requirements
+  command: |
+    cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
+
+    pip install --no-cache-dir -r ./requirements.txt
+    pip install --no-cache-dir -r ./requirements-dev.txt
+
+    ./scripts/init-webserver.sh /dev/stderr
+
+angular: &angular
+  name: Install Angular CLI
+  command: |
+    ./scripts/setup-angular.sh /dev/stderr
+    ./scripts/build-frontend.sh /dev/stderr
+
+cloudfoundry: &cloudfoundry
+  name: Setup CloudFoundry client CLI
+  command: |
+    ./scripts/setup-cf.sh /dev/stderr
+
+
+logging: &logging
+  path: logs
+
+
 jobs:
   ut-components:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-
-      - image: postgres:9.4
-        environment:
-          POSTGRES_USER: circleci
-          POSTGRES_PASSWORD: circleci
-          POSTGRES_DB: circle-test
-
-    working_directory: /var/local
+    <<: *application
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Install Angular CLI
-          command: |
-            ./scripts/setup-angular.sh /dev/stderr
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/init-webserver.sh /dev/stderr
+      - run: *django
 
       - run:
           name: Run component tests
@@ -54,49 +81,16 @@ jobs:
             ./run test --parallel=4 discovery categories vendors contracts
 
       - store_artifacts:
-          path: logs
+          <<: *logging
           destination: component-test-reports
 
   ut-core-api:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-
-      - image: postgres:9.4
-        environment:
-          POSTGRES_USER: circleci
-          POSTGRES_PASSWORD: circleci
-          POSTGRES_DB: circle-test
-
-    working_directory: /var/local
+    <<: *application
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Install Angular CLI
-          command: |
-            ./scripts/setup-angular.sh /dev/stderr
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/init-webserver.sh /dev/stderr
+      - run: *django
 
       - run:
           name: Run core API tests
@@ -110,49 +104,16 @@ jobs:
             ./run test api --tag=info
 
       - store_artifacts:
-          path: logs
+          <<: *logging
           destination: core-api-test-reports
 
   ut-api-fields:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-
-      - image: postgres:9.4
-        environment:
-          POSTGRES_USER: circleci
-          POSTGRES_PASSWORD: circleci
-          POSTGRES_DB: circle-test
-
-    working_directory: /var/local
+    <<: *application
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Install Angular CLI
-          command: |
-            ./scripts/setup-angular.sh /dev/stderr
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/init-webserver.sh /dev/stderr
+      - run: *django
 
       - run:
           name: Run API field tests
@@ -161,49 +122,16 @@ jobs:
             ./run test api --tag=field_test
 
       - store_artifacts:
-          path: logs
+          <<: *logging
           destination: api-field-test-reports
 
   ut-api-values:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-
-      - image: postgres:9.4
-        environment:
-          POSTGRES_USER: circleci
-          POSTGRES_PASSWORD: circleci
-          POSTGRES_DB: circle-test
-
-    working_directory: /var/local
+    <<: *application
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Install Angular CLI
-          command: |
-            ./scripts/setup-angular.sh /dev/stderr
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/init-webserver.sh /dev/stderr
+      - run: *django
 
       - run:
           name: Run API values tests
@@ -212,49 +140,17 @@ jobs:
             ./run test api --tag=values_test
 
       - store_artifacts:
-          path: logs
+          <<: *logging
           destination: api-values-test-reports
 
   ut-frontend:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-
-      - image: postgres:9.4
-        environment:
-          POSTGRES_USER: circleci
-          POSTGRES_PASSWORD: circleci
-          POSTGRES_DB: circle-test
-
-    working_directory: /var/local
+    <<: *application
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Install Angular CLI
-          command: |
-            ./scripts/setup-angular.sh /dev/stderr
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/init-webserver.sh /dev/stderr
+      - run: *django
+      - run: *angular
 
       - run:
           name: Run Angular tests
@@ -263,118 +159,54 @@ jobs:
             ./scripts/test-frontend.sh /dev/stderr
 
       - store_artifacts:
-          path: logs
+          <<: *logging
           destination: angular-test-reports
 
   dep-dev:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-          CF_LOGIN_URL: 'https://api.fr.cloud.gov'
-
-    working_directory: /var/local
+    <<: *deployer
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Build static files
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/setup-angular.sh /dev/stderr
-            ./scripts/build-frontend.sh /dev/stderr
-            ./scripts/init-webserver.sh /dev/stderr
-
-      - run:
-          name: Setup CloudFoundry client CLI
-          command: |
-            ./scripts/setup-cf.sh /dev/stderr
+      - run: *django
+      - run: *angular
+      - run: *cloudfoundry
 
       - run:
           name: Deploy development applications
           command: |
             ./scripts/deploy-dev.sh
 
-  dep-prod:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
-          CF_LOGIN_URL: 'https://api.fr.cloud.gov'
+      - store_artifacts:
+          <<: *logging
+          destination: dev-deploy-reports
 
-    working_directory: /var/local
+  dep-prod:
+    <<: *deployer
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Set CircleCI configuration
-          command: |
-            cp ./app/discovery/local_settings.circle.py ./app/discovery/local_settings.py
-
-      - run:
-          name: Build static files
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
-            ./scripts/setup-angular.sh /dev/stderr
-            ./scripts/build-frontend.sh /dev/stderr
-            ./scripts/init-webserver.sh /dev/stderr
-
-      - run:
-          name: Setup CloudFoundry client CLI
-          command: |
-            ./scripts/setup-cf.sh /dev/stderr
+      - run: *django
+      - run: *angular
+      - run: *cloudfoundry
 
       - run:
           name: Deploy production applications
           command: |
             ./scripts/deploy-prod.sh
 
-  dep-docs:
-    docker:
-      - image: python:3.6-slim-stretch
-        environment:
-          LANG: C.UTF-8
-          PYTHONUNBUFFERED: 1
+      - store_artifacts:
+          <<: *logging
+          destination: prod-deploy-reports
 
-    working_directory: /var/local
+  dep-docs:
+    <<: *deployer
 
     steps:
-      - run:
-          name: Install development tools
-          command: |
-            apt-get update
-            apt-get install -y git gcc make
-
+      - run: *core
       - checkout
-
-      - run:
-          name: Install requirements
-          command: |
-            pip install --no-cache-dir -r ./requirements.txt
-            pip install --no-cache-dir -r ./requirements-dev.txt
+      - run: *django
 
       - run:
           name: Deploy documentation
@@ -384,8 +216,8 @@ jobs:
             ./scripts/deploy-docs.sh "${CIRCLE_BRANCH}"
 
       - store_artifacts:
-          path: logs
-          destination: docs-reports
+          <<: *logging
+          destination: docs-deploy-reports
 
 workflows:
   version: 2
