--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,21 @@ chrome: &chrome
   command: |
     ./scripts/setup-chrome.sh /dev/stderr
 
+xvfb: &xvfb
+  name: Running Xvfb server
+  background: true
+  command: Xvfb -ac :99 -screen 0 1280x1024x16 +extension RANDR > /dev/null 2>&1
+
+discovery: &discovery
+  name: Import fixtures and run test server
+  background: true
+  command: |
+    ./scripts/init-db.sh /dev/stderr
+    ./scripts/init-webserver.sh /dev/stderr
+    ./scripts/load-fixtures.sh
+    cd app
+    waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
+
 
 logging: &logging
   path: logs
@@ -157,6 +172,8 @@ jobs:
       - run: *django
       - run: *angular
       - run: *chrome
+      - run: *xvfb
+      - run: *discovery
 
       - run:
           name: Run Angular tests
