--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,6 +179,7 @@ jobs:
           name: Run Angular tests
           no_output_timeout: 1h
           command: |
+            ./scripts/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
             ./scripts/test-frontend.sh /dev/stderr
 
       - store_artifacts:
