--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ core: &core
   name: Install development tools
   command: |
     apt-get update
-    apt-get install -y git gcc
+    apt-get install -y git gcc procps
 
 django: &django
   name: Install requirements
