--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,11 +176,34 @@ jobs:
       - run: *discovery
 
       - run:
-          name: Run Angular tests
+          name: Run Angular Karma tests
           no_output_timeout: 1h
           command: |
             ./scripts/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
-            ./scripts/test-frontend.sh /dev/stderr
+            ./scripts/test-frontend.sh test /dev/stderr
+
+      - store_artifacts:
+          <<: *logging
+          destination: angular-test-reports
+
+  at-frontend:
+    <<: *application
+
+    steps:
+      - run: *core
+      - checkout
+      - run: *django
+      - run: *angular
+      - run: *chrome
+      - run: *xvfb
+      - run: *discovery
+
+      - run:
+          name: Run Angular Protractor tests
+          no_output_timeout: 1h
+          command: |
+            ./scripts/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
+            ./scripts/test-frontend.sh e2e /dev/stderr
 
       - store_artifacts:
           <<: *logging
@@ -252,6 +275,7 @@ workflows:
       - ut-api-fields
       - ut-api-values
       - ut-frontend
+      - at-frontend
       - dep-dev:
           requires:
             - ut-components
@@ -259,6 +283,7 @@ workflows:
             - ut-api-fields
             - ut-api-values
             - ut-frontend
+            - at-frontend
           filters:
             branches:
               only: develop
@@ -269,6 +294,7 @@ workflows:
             - ut-api-fields
             - ut-api-values
             - ut-frontend
+            - at-frontend
           filters:
             branches:
               only: master
