--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,3 +5,5 @@ selenium==3.14.1           # Selenium test framework
 Sphinx==1.8.1              # Sphinx documentation generator
 sphinx_rtd_theme==0.4.2    # Documentation site theme
 recommonmark==0.4.0        # Markdown to HTML processing for Sphinx
+
+locustio==0.9.0            # Python load testing
