--- a/vagrant/config.default.yml
+++ b/vagrant/config.default.yml
@@ -15,6 +15,7 @@ web_port: 8080
 db_port: 5432
 queue_port: 6379
 auth_port: 6479
+locust_port: 8089
 copy_ssh: false
 copy_gitconfig: true
 copy_vimrc: false
