--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git g++ gcc procps
 
       - checkout
 
@@ -72,7 +72,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git g++ gcc procps
 
       - checkout
 
@@ -123,7 +123,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git g++ gcc procps
 
       - checkout
 
@@ -169,7 +169,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git g++ gcc procps
 
       - checkout
 
@@ -215,7 +215,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc
+            apt-get install -y git g++ gcc procps
 
       - checkout
 
@@ -328,7 +328,7 @@ jobs:
           name: Install development tools
           command: |
             apt-get update
-            apt-get install -y git gcc make
+            apt-get install -y git g++ gcc make
 
       - checkout
 
