Updating the angular.json configuration to run ng serve on host 0.0.0.0 (needed for outside access).

--- a/app/frontend/angular.json
+++ b/app/frontend/angular.json
@@ -48,7 +48,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "discovery:build"
+            "browserTarget": "discovery:build",
+            "host": "0.0.0.0"
           },
           "configurations": {
             "production": {
