Adding make installation to the core task group in the CircleCI configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ core: &core
   name: Install development tools
   command: |
     apt-get update
-    apt-get install -y git g++ gcc procps
+    apt-get install -y git g++ gcc make procps
 
 django: &django
   name: Install requirements
